--- a/CFP.Dominio/CFP.Dominio.csproj
+++ b/CFP.Dominio/CFP.Dominio.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Dominio\TipoRenda.cs" />
     <Compile Include="Dominio\Usuario.cs" />
     <Compile Include="IEntidade\IEntidade.cs" />
+    <Compile Include="ObjetoValor\AlertaContas.cs" />
     <Compile Include="ObjetoValor\EntradaSaida.cs" />
     <Compile Include="ObjetoValor\NomeTelas.cs" />
     <Compile Include="ObjetoValor\PessoaTipoRenda.cs" />
