--- a/CFP.App/CFP.App.csproj
+++ b/CFP.App/CFP.App.csproj
@@ -40,6 +40,9 @@
   <PropertyGroup>
     <StartupObject>CFP.App.App</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icone3-sem-fundo-48x48.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr3.Runtime.3.5.1\lib\net40-client\Antlr3.Runtime.dll</HintPath>
@@ -403,7 +406,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="icone3-sem-fundo-48x48.ico" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CFP.Dominio\CFP.Dominio.csproj">
       <Project>{e96c2843-48f7-4491-b51d-3c21739861c2}</Project>
