Opcao de envio para cofre na tela de ref pessoa no caixa, posso optar em enviar para cofre e em seguida ja retirar do mesmo e colocar como entrada no caixa. Concluido e testado

--- a/CFP.Dominio/CFP.Dominio.csproj
+++ b/CFP.Dominio/CFP.Dominio.csproj
@@ -95,6 +95,7 @@
     <Compile Include="ObjetoValor\TipoPeriodo.cs" />
     <Compile Include="ObjetoValor\TipoContaBanco.cs" />
     <Compile Include="ObjetoValor\TipoUsuario.cs" />
+    <Compile Include="ObjetoValor\TransacaoBancaria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
