Confirmacao de recebimento da renda criado e testado.

--- a/CFP.App/CFP.App.csproj
+++ b/CFP.App/CFP.App.csproj
@@ -173,6 +173,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Formularios\Financeiros\TelasConfirmacoes\RecebimentoRenda.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Formularios\Financeiros\TelasConfirmacoes\TransferenciaCofres.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -319,6 +323,9 @@
     </Compile>
     <Compile Include="Formularios\Financeiros\TelasConfirmacoes\NovasParcelas.xaml.cs">
       <DependentUpon>NovasParcelas.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Financeiros\TelasConfirmacoes\RecebimentoRenda.xaml.cs">
+      <DependentUpon>RecebimentoRenda.xaml</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Financeiros\TelasConfirmacoes\TransferenciaCofres.xaml.cs">
       <DependentUpon>TransferenciaCofres.xaml</DependentUpon>
