--- a/CFP.App/CFP.App.csproj
+++ b/CFP.App/CFP.App.csproj
@@ -442,6 +442,10 @@
       <Project>{e96c2843-48f7-4491-b51d-3c21739861c2}</Project>
       <Name>CFP.Dominio</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CFP.DTO\CFP.DTO.csproj">
+      <Project>{886256ab-1e0a-40b4-a046-d448745fe1f3}</Project>
+      <Name>CFP.DTO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CFP.Ferramentas\CFP.Ferramentas.csproj">
       <Project>{B8AF5BEC-56CD-48A3-BEA1-0E6ECE64C00F}</Project>
       <Name>CFP.Ferramentas</Name>
