Exportar Excel da consulta de cofre corrigida

--- a/CFP.DTO/CFP.DTO.csproj
+++ b/CFP.DTO/CFP.DTO.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cofres\CofreDTO.cs" />
     <Compile Include="Contas\ConsultaContasDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
