--- a/CFP.Dominio/CFP.Dominio.csproj
+++ b/CFP.Dominio/CFP.Dominio.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Dominio\Banco.cs" />
     <Compile Include="Dominio\Base.cs" />
     <Compile Include="Dominio\Caixa.cs" />
+    <Compile Include="Dominio\CartaoCredito.cs" />
+    <Compile Include="Dominio\CartaoCreditoItens.cs" />
     <Compile Include="Dominio\Cofre.cs" />
     <Compile Include="Dominio\Configuracao.cs" />
     <Compile Include="Dominio\Conta.cs" />
@@ -81,6 +83,7 @@
     <Compile Include="Dominio\Usuario.cs" />
     <Compile Include="IEntidade\IEntidade.cs" />
     <Compile Include="ObjetoValor\PeriodoDia.cs" />
+    <Compile Include="ObjetoValor\SituacaoFatura.cs" />
     <Compile Include="ObjetoValor\TipoAlertaContas.cs" />
     <Compile Include="ObjetoValor\EntradaSaida.cs" />
     <Compile Include="ObjetoValor\NomeTelas.cs" />
