Correcao de Geracao de faturas divididas. Ajustes nas pesquisas para buscar sem acento e indifeente de maiusculas ou minusculas. Campo dataRegistro adicionado no cadastro de cofre.

--- a/CFP.Ferramentas/CFP.Ferramentas.csproj
+++ b/CFP.Ferramentas/CFP.Ferramentas.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Exportar\ExportarExcel.cs" />
     <Compile Include="Exportar\ExportarPDF.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Texto.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CFP.Dominio\CFP.Dominio.csproj">
