--- a/CFP.Repositorio/packages.config
+++ b/CFP.Repositorio/packages.config
@@ -2,10 +2,21 @@
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.21.9" targetFramework="net48" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
+  <package id="K4os.Compression.LZ4" version="1.3.5" targetFramework="net48" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.3.5" targetFramework="net48" />
+  <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net48" />
   <package id="LinqKit" version="1.0" targetFramework="net461" />
-  <package id="MySql.Data" version="6.10.7" targetFramework="net461" />
+  <package id="MySql.Data" version="8.0.33" targetFramework="net48" />
   <package id="NHibernate" version="5.2.0" targetFramework="net461" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net48" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
