Ajuste de colunas em campos de pesquisas (Remoção e conversão em string). Ajustes de layout em geral.

--- a/CFP.App/CFP.App.csproj
+++ b/CFP.App/CFP.App.csproj
@@ -18,7 +18,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\HIRO\Desktop\Instalador_CFP\instaldorcfp4.8_2\</PublishUrl>
+    <PublishUrl>C:\Users\HIRO\Desktop\Instalador\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
